--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!--  Title -->
     <title>
-        kiki's Portfolios
+        kiki's Portfolio
     </title>
 
     <!-- Font Google -->
@@ -396,7 +396,7 @@
                             </a>
 
                             <p class="sm-p mt-15 theme-color">
-                                NOTE : First make sure to read the terms and service aka. <a href="index.html">TOS</a>
+                                NOTE : First make sure to read the terms and service, <a href="index.html">TOS</a>
                             </p>
                         </div>
                     </div>
