--- a/Fanart.html
+++ b/Fanart.html
@@ -119,7 +119,7 @@
                         </li>
 
                         <li class="dsn-drop-down">
-                            <a href="Fanart.html" class="user-no-selection">
+                            <a href="#" class="user-no-selection">
                                 <span class="dsn-title-menu">Artworks</span>
                                 <span class="dsn-meta-menu">06</span>
                                 <span class="dsn-bg-arrow"></span>
@@ -220,7 +220,7 @@
                     <header class="header-project p-relative -v over-hidden dsn-header-animation v-dark-head">
 
                         <div class="project-number p-absolute dsn-container d-flex">
-                            <h6>Page</h6>
+                            <h6 style="color: rgb(255, 233, 233);">Page</h6>
                             <span class="curent">1</span>
                             <span class="full">6</span>
                         </div>
@@ -229,10 +229,10 @@
                                 <div class="intro-project">
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
-                                            <span>illustrations</span>
-                                            <span>Artwork</span>
+                                            <span style="color: rgb(255, 233, 233);">illustrations</span>
+                                            <span style="color: rgb(255, 233, 233);">Artwork</span>
                                         </div>
-                                        <h1 class="title" data-dsn-ajax="title">
+                                        <h1 style="color: rgb(255, 233, 233);" class="title" data-dsn-ajax="title">
                                             FanArt
                                         </h1>
                                     </div>
@@ -256,16 +256,16 @@
                                 <div class="folio-item">
                                     <div class="folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
-                                            <img src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
+                                            <img width="563.5" src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/FanArt</div>
-                                        <h4 class="folio-item__title">Gura Christmas Ver!</h4>
+                                        <h4 class="folio-item__title"> Gawr Gura!</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
-                                        <p>Original OC.</p>
+                                        <p>gawr gura</p>
                                     </div>
                                 </div>
                             </div>
@@ -292,7 +292,7 @@
                                 <div class="folio-item">
                                     <div class="folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Gura" data-size="500x500">
-                                            <img width="563.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
+                                            <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
@@ -327,23 +327,22 @@
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
-                            <h6>Project</h6>
+                            <h6>Commissions</h6>
                             <span class="curent">2</span>
                             <span class="full">6</span>
                         </div>
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
-                            <span>Architecture</span>
+                            <span>keep scrolling down</span>
                         </div>
                         <a href="project2.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
-                                <span class="title-stroke">Yaren collection</span>
-                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Yaren
-                                        collection</span>
+                                <span class="title-stroke">Paid Artworks!</span>
+                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Paid Artworks!</span>
                             </h2>
                         </a>
                         <div class="case">
                             <div class="p-absolute w-100 h-100 ">
-                                <img class="cover-bg-img" src="assets/img/case.svg" alt="">
+                                <img class="cover-bg-img" src="assets/img/case.svg" alt="keep scrolling down">
                             </div>
                             <strong class="title-block heading-color number v-middle">
                                     100%
