--- a/Fanart.html
+++ b/Fanart.html
@@ -251,10 +251,10 @@
 
 
                         <br>
-                        <div class="row s-portfolio__list block-large-1-2 block-tab-full collapse">
+                        <div class="row s-portfolio__list block-large-1-2 block-tab-full collapse ">
                             <div class="column" data-aos="fade-up">
-                                <div class="folio-item">
-                                    <div class="folio-item__thumb">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraTweetEdited.png" title="Gura" data-size="905x1280">
                                             <img width="563.5" src="assets/img/project/project1/GuraTweetEdited.png" srcset="assets/img/project/project1/GuraTweetEdited.png 2x, assets/img/project/project1/GuraTweetEdited.png 4x" alt="Recent Works">
                                         </a>
@@ -272,7 +272,7 @@
 
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
-                                    <div class="folio-item__thumb">
+                                    <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/GuraChristmas.png" title="Gura" data-size="905x1280">
                                             <img width="563.5" src="assets/img/project/project1/GuraChristmas.png" srcset="assets/img/project/project1/GuraChristmas.png 1x, assets/img/project/project1/GuraChristmas.png" alt="Recent Works">
                                         </a>
@@ -290,7 +290,7 @@
                             <!-- End column-->
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
-                                    <div class="folio-item__thumb">
+                                    <div class="has-popup folio-item__thumb">
                                         <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Gura" data-size="500x500">
                                             <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
                                         </a>
