--- a/project2.html
+++ b/project2.html
@@ -233,11 +233,12 @@
                                 <div class="intro-project">
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
-                                            <span>pen</span>
+                                            <span>Paid</span>
+                                            <span>Work</span>
 
                                         </div>
                                         <h1 class="title" data-dsn-ajax="title">
-                                            Yaren collection
+                                            Commissions
                                         </h1>
                                     </div>
                                 </div>
@@ -252,52 +253,7 @@
 
 
                     <div class="wrapper">
-                        <!--=== Intro Project ===-->
-                        <div class="intro-project p-relative section-margin">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="intro-project-left">
-                                            <h4 class="title-block text-uppercase mb-20">Project</h4>
-                                            <ul class="intro-project-list">
-                                                <li class="p-relative"><strong>Agency</strong>Immersive interactive gallery
-                                                </li>
-                                                <li class="p-relative"><strong>creating</strong>vere</li>
-                                                <li class="p-relative"><strong> Published</strong>April 2nd 2019</li>
-                                            </ul>
-                                        </div>
-                                    </div>
 
-                                    <div class="col-lg-7 offset-lg-1">
-                                        <div class="intro-project-right">
-                                            <h4 class="title-block text-uppercase mb-20">info</h4>
-                                            <p class="intro-project-description">Vin tries to reflect Diesel’s vision and combines the universe of the rock of the 80’s with a clear and essential design to be more confident with its customers who need strong symbols through which express
-                                                themselves
-                                            </p>
-
-                                            <div class="intro-project-cat mt-30"><span class="cat-item"> Arthur Kenzo
-                                                </span><span class="cat-item"> Smart Speaker </span> <span class="cat-item">Voice Speaker </span> <span class="cat-item">design</span>
-                                            </div>
-
-                                            <a target="_blank" href="https://www.behance.net/gallery/78359467/YIREN-design-illustration-collection" class="visit-site mt-30">
-                                                <span class="inner-visit d-flex align-items-center">
-                                                    <span class="text text-uppercase">Visit Website</span>
-
-                                                <span class="icon">
-                                                        <svg viewBox="0 0 40 40">
-                                                            <polyline class="path"
-                                                                points="14.6 17.45 20 22.85 25.4 17.45">
-                                                            </polyline>
-                                                        </svg>
-                                                    </span>
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--=== End Intro Project ===-->
 
                         <div class="container section-margin ">
                             <div class="p-relative">
@@ -323,48 +279,57 @@
                             </div>
                         </div>
 
-                        <div class="container section-margin">
-                            <div class="p-relative">
-                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/5-sm.jpg" data-dsn-srcset="assets/img/project/project2/5.jpg 1800w,assets/img/project/project2/5-sm.jpg 768w" alt="" class="has-bigger-scale">
-                                <div class="cap">
-                                    <span>Photography</span>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="section-margin has-popup over-hidden p-relative">
+
+
+                        <!--=== Intro Project ===-->
+                        <div class="intro-project p-relative section-margin" data-dsn-animate="section">
                             <div class="container">
-                                <div class="d-grid grid-md-3  over-hidden">
-                                    <a href="assets/img/project/project2/6.jpg" class="p-relative over-hidden d-flex h-v-60">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/6-sm.jpg" data-dsn-srcset="assets/img/project/project2/6.jpg 1800w,assets/img/project/project2/6-sm.jpg 768w" alt="" class="cover-bg-img">
-                                    </a>
-                                    <a href="assets/img/project/project2/7.jpg" class="p-relative over-hidden d-flex h-v-60">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/7-sm.jpg" data-dsn-srcset="assets/img/project/project2/7.jpg 1800w,assets/img/project/project2/7-sm.jpg 768w" alt="" class="cover-bg-img">
-                                    </a>
-                                    <a href="assets/img/project/project2/8.jpg" class="p-relative over-hidden d-flex h-v-60">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/8-sm.jpg" data-dsn-srcset="assets/img/project/project2/8.jpg 1800w,assets/img/project/project2/8-sm.jpg 768w" alt="" class="cover-bg-img">
-                                    </a>
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <div class="intro-project-left">
+                                            <h4 class="title-block text-uppercase mb-20 dsn-text">Project</h4>
+                                            <ul class="intro-project-list ">
+                                                <li class="p-relative dsn-text"><strong>Agency</strong>Immersive interactive gallery
+                                                </li>
+                                                <li class="p-relative dsn-text"><strong>creating</strong>vere</li>
+                                                <li class="p-relative dsn-text"><strong> Published</strong>April 2nd 2019</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-7 offset-lg-1">
+                                        <div class="intro-project-right">
+                                            <h4 class="title-block text-uppercase mb-20 dsn-text">info</h4>
+                                            <p class="intro-project-description dsn-up">Vin tries to reflect Diesel’s vision and combines the universe of the rock of the 80’s with a clear and essential design to be more confident with its customers who need strong symbols through which express
+                                                themselves
+                                            </p>
+
+                                            <div class="intro-project-cat mt-30 dsn-up"><span class="cat-item"> Arthur Kenzo
+                        </span><span class="cat-item"> Smart Speaker </span> <span class="cat-item">Voice Speaker </span> <span class="cat-item">design</span>
+                                            </div>
+
+                                            <a target="_blank" href="https://www.behance.net/gallery/78359467/YIREN-design-illustration-collection" class="visit-site mt-30">
+                                                <span class="inner-visit d-flex align-items-center ">
+                            <span class="text text-uppercase dsn-up">Visit Website</span>
+
+                                                <span class="icon dsn-up">
+                                <svg viewBox="0 0 40 40">
+                                    <polyline class="path dsn-up"
+                                        points="14.6 17.45 20 22.85 25.4 17.45">
+                                    </polyline>
+                                </svg>
+                            </span>
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <!--=== End Intro Project ===-->
 
-                        <div class="container section-p section-margin p-relative" data-dsn-animate="section">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <h4 class="title-block dsn-text sm-mb-20">
-                                        Customisable & <br> Flexible
-                                    </h4>
-                                </div>
 
-                                <div class="col-lg-8">
-                                    <p class="dsn-up">
-                                        We learned that different house have different preferences. So we decide that CareDot with different color to match different interior isn’t enough. We also make the alarm button customisable. This allow user to choose a symbol that make the most sense
-                                        for their use case scenario along with personal message surrounding it.
-                                    </p>
-                                </div>
-                            </div>
-
-                        </div>
 
                     </div>
 
