--- a/Fanart.html
+++ b/Fanart.html
@@ -323,7 +323,7 @@
 
                 <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
                     <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                        <img src="assets/img/project/project2/1.jpg" alt="" class="cover-bg-img">
+                        <img src="assets/img/project/project1/Cyanide's Ref Sheet blured.png" alt="" class="cover-bg-img">
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
@@ -334,7 +334,7 @@
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
                             <span>keep scrolling down</span>
                         </div>
-                        <a href="project2.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                        <a href="Commissions.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
                                 <span class="title-stroke">Paid Artworks!</span>
                                 <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Paid Artworks!</span>
