--- a/Commissions.html
+++ b/Commissions.html
@@ -257,10 +257,10 @@
 
                         <div class="container section-margin ">
                             <div class="p-relative">
-                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/2-sm.jpg" data-dsn-srcset="assets/img/project/project2/2.jpg 1800w,assets/img/project/project2/2-sm.jpg 768w" class="has-bigger-scale w-100"
-                                    alt="">
+                                <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project1/Cyanide's Ref Sheet tweet.png" data-dsn-srcset="assets/img/project/project2/project1/Cyanide's Ref Sheet tweet.png 1800w,assets/img/project/project1/Cyanide's Ref Sheet tweet.png 768w"
+                                    class="has-bigger-scale w-100" alt="">
                                 <div class="cap">
-                                    <span>Photography</span>
+                                    <span>Reference Sheet</span>
                                 </div>
                             </div>
                         </div>
