--- a/Fanart.html
+++ b/Fanart.html
@@ -220,7 +220,7 @@
                     <header class="header-project p-relative -v over-hidden dsn-header-animation v-dark-head">
 
                         <div class="project-number p-absolute dsn-container d-flex">
-                            <h6 style="color: rgb(255, 233, 233);">Page</h6>
+                            <h6>Page</h6>
                             <span class="curent">1</span>
                             <span class="full">6</span>
                         </div>
@@ -229,12 +229,14 @@
                                 <div class="intro-project">
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
-                                            <span style="color: rgb(255, 233, 233);">illustrations</span>
-                                            <span style="color: rgb(255, 233, 233);">Artwork</span>
+                                            <span>illustrations</span>
+                                            <span>Artwork</span>
                                         </div>
-                                        <h1 style="color: rgb(255, 233, 233);" class="title" data-dsn-ajax="title">
-                                            FanArt
-                                        </h1>
+                                        <div class="p-relative dsn-hero-parallax-title">
+                                            <h1 data-dsn-ajax="title">
+                                                FanArt
+                                            </h1>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -265,7 +267,7 @@
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
-                                        <p>gawr gura</p>
+                                        <p>Gawr Gura</p>
                                     </div>
                                 </div>
                             </div>
@@ -281,9 +283,10 @@
                                         <div class="folio-item__cat">illustration/FanArt</div>
                                         <h4 class="folio-item__title">Gura Christmas Ver!</h4>
                                     </div>
+
                                     <a target=”blank” href="#0" title="Twitter" class="folio-item__project-link">None</a>
                                     <div class="folio-item__caption">
-                                        <p>Original OC.</p>
+                                        <p>FanArt</p>
                                     </div>
                                 </div>
                             </div>
@@ -291,7 +294,7 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Gura" data-size="500x500">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
                                             <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
                                         </a>
                                     </div>
