--- a/Commissions.html
+++ b/Commissions.html
@@ -217,34 +217,31 @@
             <div class="main-content">
                 <div class="content-inner">
                     <!--=== Header Project Full With & content bottom ===-->
-                    <header class="header-project p-relative h-100-v over-hidden dsn-header-animation v-dark-head">
-                        <div data-dsn-ajax="img" class="p-absolute dsn-hero-parallax-img w-100 h-100 over-hidden" data-overlay="6">
-                            <img class="cover-bg-img" src="assets/img/project/project2/1.jpg" alt="">
-                        </div>
+                    <header class="header-project p-relative -v over-hidden dsn-header-animation v-dark-head">
 
                         <div class="project-number p-absolute dsn-container d-flex">
-                            <h6>Project</h6>
-                            <span class="curent">2</span>
+                            <h6>Page</h6>
+                            <span class="curent">1</span>
                             <span class="full">6</span>
                         </div>
-
-                        <div class="d-flex  dsn-hero-parallax-title align-items-end h-100 dsn-container pb-40 pt-80">
+                        <br>
+                        <div class="d-flex  dsn-hero-parallax-title align-items-end  dsn-container pb-40 pt-80">
                             <div class="content p-relative w-100 padding-lr-section">
                                 <div class="intro-project">
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
-                                            <span>Paid</span>
-                                            <span>Work</span>
-
+                                            <span>illustrations</span>
+                                            <span>Commissioned Piece</span>
                                         </div>
-                                        <h1 class="title" data-dsn-ajax="title">
-                                            Commissions
-                                        </h1>
+                                        <div class="p-relative dsn-hero-parallax-title">
+                                            <h1 data-dsn-ajax="title">
+                                                OC Commissions
+                                            </h1>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                         <div class="scroll-d p-absolute dsn-container">
                             <img src="assets/img/scroll_down.svg" alt="">
                         </div>
@@ -252,8 +249,13 @@
                     <!--=== End Header Project Full With & content bottom ===-->
 
 
-                    <div class="wrapper">
-                        <h1>Cyanide</h1>
+                    <div class="wrapper block-large-1-2 block-tab-full collapse ">
+                        <br>
+                        <hr color="Gray">
+                        <br>
+                        <center>
+                            <h1 style="font-size: 60px;" class="p-relative dsn-text" data-dsn-animate="section">Cyanide</h1>
+                        </center>
 
                         <div class="container section-margin ">
                             <div class="p-relative">
@@ -264,115 +266,159 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="section-margin has-popup over-hidden p-relative">
-                            <div class="container">
-                                <div class="d-grid grid-half-1  over-hidden">
-                                    <a href="assets/img/project/project2/3.jpg" class="p-relative over-hidden d-flex h-v-60">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/3-sm.jpg" data-dsn-srcset="assets/img/project/project2/3.jpg 1800w,assets/img/project/project2/3-sm.jpg 768w" alt="" class="cover-bg-img">
-                                    </a>
-
-                                    <a href="assets/img/project/project2/4.jpg" class="p-relative over-hidden d-flex h-v-60">
-                                        <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/4-sm.jpg" data-dsn-srcset="assets/img/project/project2/4.jpg 1800w,assets/img/project/project2/4-sm.jpg 768w" alt="" class="cover-bg-img">
-                                    </a>
+                        <hr color="Gray">
+                        <br>
+                        <div style="position:relative;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse">
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Cyanide!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Cyanide</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-
-
-
-                        <!--=== Intro Project ===-->
-                        <div class="intro-project p-relative section-margin" data-dsn-animate="section">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col-lg-4">
-                                        <div class="intro-project-left">
-                                            <h4 class="title-block text-uppercase mb-20 dsn-text">Project</h4>
-                                            <ul class="intro-project-list ">
-                                                <li class="p-relative dsn-text"><strong>Agency</strong>Immersive interactive gallery
-                                                </li>
-                                                <li class="p-relative dsn-text"><strong>creating</strong>vere</li>
-                                                <li class="p-relative dsn-text"><strong> Published</strong>April 2nd 2019</li>
-                                            </ul>
-                                        </div>
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" title="Cyanide" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/CyanideNewNoJacketTransparemt.png" srcset="assets/img/project/project2/CyanideNewNoJacketTransparemt.png 2x, assets/img/project/project2/CyanideNewNoJacketTransparemt.png 4x" alt="Commissioned Piece">
+                                        </a>
                                     </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Cyanide without jacket!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Cyanide</p>
+                                    </div>
+                                </div>
+                            </div>
 
-                                    <div class="col-lg-7 offset-lg-1">
-                                        <div class="intro-project-right">
-                                            <h4 class="title-block text-uppercase mb-20 dsn-text">info</h4>
-                                            <p class="intro-project-description dsn-up">Vin tries to reflect Diesel’s vision and combines the universe of the rock of the 80’s with a clear and essential design to be more confident with its customers who need strong symbols through which express
-                                                themselves
-                                            </p>
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Cyanide without jacket!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <div class="folio-item__caption">
+                                        <p>Cyanide</p>
+                                    </div>
+                                </div>
+                            </div>
 
-                                            <div class="intro-project-cat mt-30 dsn-up"><span class="cat-item"> Arthur Kenzo
-                        </span><span class="cat-item"> Smart Speaker </span> <span class="cat-item">Voice Speaker </span> <span class="cat-item">design</span>
-                                            </div>
+                        </div>
+                    </div>
 
-                                            <a target="_blank" href="https://www.behance.net/gallery/78359467/YIREN-design-illustration-collection" class="visit-site mt-30">
-                                                <span class="inner-visit d-flex align-items-center ">
-                            <span class="text text-uppercase dsn-up">Visit Website</span>
 
-                                                <span class="icon dsn-up">
+
+
+                    <!--=== Intro Project ===-->
+                    <div class="intro-project p-relative section-margin" data-dsn-animate="section">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <div class="intro-project-left">
+                                        <h4 class="title-block text-uppercase mb-20 dsn-text">Project Details</h4>
+                                        <ul class="intro-project-list ">
+                                            <li class="p-relative dsn-text"><strong>Commissioner:</strong>@Cyanide
+                                            </li>
+                                            <li class="p-relative dsn-text"><strong>Commissioned on:</strong></li>
+                                            <li class="p-relative dsn-text"><strong> Completion Date:</strong>April 2nd 2019</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-7 offset-lg-1">
+                                    <div class="intro-project-right">
+                                        <h4 class="title-block text-uppercase mb-20 dsn-text">Lore</h4>
+                                        <p class="intro-project-description dsn-up"><span style="color: rgb(184, 32, 32);">Private</span>
+                                        </p>
+
+                                        <div class="intro-project-cat mt-30 dsn-up">
+                                            <span class="cat-item"> By Shirozu </span>
+                                        </div>
+
+                                        <a target="_blank" href="https://twitter.com/kikiis_art" class="visit-site mt-30">
+                                            <span class="inner-visit d-flex align-items-center ">
+                            <span class="text text-uppercase dsn-up">Twitter</span>
+
+                                            <span class="icon dsn-up">
                                 <svg viewBox="0 0 40 40">
                                     <polyline class="path dsn-up"
                                         points="14.6 17.45 20 22.85 25.4 17.45">
                                     </polyline>
                                 </svg>
                             </span>
-                                                </span>
-                                            </a>
-                                        </div>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!--=== End Intro Project ===-->
-
-
-
                     </div>
-
-                    <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
-                        <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                            <img src="assets/img/project/project3/1.jpg" alt="" class="cover-bg-img">
-                        </div>
-                        <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
-                            <div class="project-number p-absolute d-flex">
-                                <h6>Project</h6>
-                                <span class="curent">3</span>
-                                <span class="full">6</span>
-                            </div>
-
-                            <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
-                                <span>induction</span>
-                            </div>
-
-                            <a href="project3.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
-                                <h2 class="title section-padding p-relative ">
-                                    <span class="title-stroke">Huggl Power Pack</span>
-
-                                    <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Huggl Power
-                                        Pack</span>
-                                </h2>
-                            </a>
-
-                            <div class="case">
-                                <div class="p-absolute w-100 h-100 ">
-                                    <img class="cover-bg-img" src="assets/img/case.svg" alt="">
-                                </div>
-                                <strong class="title-block heading-color number v-middle">
-                                    100%
-                                </strong>
-                            </div>
-                        </div>
-                    </div>
-
+                    <!--=== End Intro Project ===-->
 
 
 
                 </div>
+
+                <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
+                    <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
+                        <img src="assets/img/project/project3/1.jpg" alt="" class="cover-bg-img">
+                    </div>
+                    <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
+                        <div class="project-number p-absolute d-flex">
+                            <h6>Project</h6>
+                            <span class="curent">3</span>
+                            <span class="full">6</span>
+                        </div>
+
+                        <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
+                            <span>induction</span>
+                        </div>
+
+                        <a href="project3.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                            <h2 class="title section-padding p-relative ">
+                                <span class="title-stroke">Huggl Power Pack</span>
+
+                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Huggl Power
+                                        Pack</span>
+                            </h2>
+                        </a>
+
+                        <div class="case">
+                            <div class="p-absolute w-100 h-100 ">
+                                <img class="cover-bg-img" src="assets/img/case.svg" alt="">
+                            </div>
+                            <strong class="title-block heading-color number v-middle">
+                                    100%
+                                </strong>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
             </div>
+        </div>
         </div>
     </main>
 
