--- a/Commissions.html
+++ b/Commissions.html
@@ -268,7 +268,7 @@
                         </div>
                         <hr color="Gray">
                         <br>
-                        <div style="position:relative;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse">
+                        <div style="position:relative; left: 17.5px;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse over-hidden">
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item ">
                                     <div class="has-popup folio-item__thumb">
@@ -280,7 +280,7 @@
                                         <div class="folio-item__cat">OC Commission</div>
                                         <h4 class="folio-item__title">Cyanide!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1537504500717867009?s=20&t=Oy96VLzBATWBasYRjes_xw" title="Twitter" class="folio-item__project-link">Twitter</a>
                                     <div class="folio-item__caption">
                                         <p>Cyanide</p>
                                     </div>
@@ -298,7 +298,7 @@
                                         <div class="folio-item__cat">OC Commission</div>
                                         <h4 class="folio-item__title">Cyanide without jacket!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/95052320" title="PIXIV" class="folio-item__project-link">Pixiv</a>
                                     <div class="folio-item__caption">
                                         <p>Cyanide</p>
                                     </div>
@@ -308,15 +308,15 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item ">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/CyanideNew Transparent.png" title="Cyanide" data-size="905x1280">
-                                            <img width="463.5" src="assets/img/project/project2/CyanideNew Transparent.png" srcset="assets/img/project/project2/CyanideNew Transparent.png 2x, assets/img/project/project2/CyanideNew Transparent.png 4x" alt="Commissioned Piece">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/dwdwd.png" title="Cyanide" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/dwdwd.png" srcset="assets/img/project/project2/dwdwd.png 2x, assets/img/project/project2/dwdwd.png 4x" alt="Commissioned Piece">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">OC Commission</div>
-                                        <h4 class="folio-item__title">Cyanide without jacket!</h4>
+                                        <h4 class="folio-item__title">Cyanide BackSide!</h4>
                                     </div>
-                                    <a target=”blank” href="https://twitter.com/kikiis_art/status/1450081152870408194" title="Twitter" class="folio-item__project-link">Twitter</a>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/95052320" title="PIXIV" class="folio-item__project-link">Pixiv</a>
                                     <div class="folio-item__caption">
                                         <p>Cyanide</p>
                                     </div>
@@ -332,36 +332,181 @@
                     <!--=== Intro Project ===-->
                     <div class="intro-project p-relative section-margin" data-dsn-animate="section">
                         <div class="container">
-                            <div class="row">
+                            <div class="row dsn-up">
                                 <div class="col-lg-4">
                                     <div class="intro-project-left">
-                                        <h4 class="title-block text-uppercase mb-20 dsn-text">Project Details</h4>
+                                        <h4 class="title-block text-uppercase mb-20 ">Project Details</h4>
                                         <ul class="intro-project-list ">
-                                            <li class="p-relative dsn-text"><strong>Commissioner:</strong>@Cyanide
+                                            <li class="p-relative "><strong>Commissioner:</strong>@Cyanide
                                             </li>
-                                            <li class="p-relative dsn-text"><strong>Commissioned on:</strong></li>
-                                            <li class="p-relative dsn-text"><strong> Completion Date:</strong>April 2nd 2019</li>
+                                            <li class="p-relative "><strong>Commissioned on:</strong>-</li>
+                                            <li class="p-relative "><strong> Completion Date:</strong>April 2nd 2019</li>
                                         </ul>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-7 offset-lg-1">
                                     <div class="intro-project-right">
-                                        <h4 class="title-block text-uppercase mb-20 dsn-text">Lore</h4>
-                                        <p class="intro-project-description dsn-up"><span style="color: rgb(184, 32, 32);">Private</span>
+                                        <h4 class="title-block text-uppercase mb-20 ">Lore</h4>
+                                        <p class="intro-project-description"><span style="color: rgb(184, 32, 32);">Private</span>
                                         </p>
 
-                                        <div class="intro-project-cat mt-30 dsn-up">
+                                        <div class="intro-project-cat mt-30 ">
                                             <span class="cat-item"> By Shirozu </span>
                                         </div>
 
                                         <a target="_blank" href="https://twitter.com/kikiis_art" class="visit-site mt-30">
                                             <span class="inner-visit d-flex align-items-center ">
-                            <span class="text text-uppercase dsn-up">Twitter</span>
+                            <span class="text text-uppercase ">Twitter</span>
 
-                                            <span class="icon dsn-up">
+                                            <span class="icon ">
                                 <svg viewBox="0 0 40 40">
-                                    <polyline class="path dsn-up"
+                                    <polyline class="path "
+                                        points="14.6 17.45 20 22.85 25.4 17.45">
+                                    </polyline>
+                                </svg>
+                            </span>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--=== End Intro Project ===-->
+
+                    <div class="wrapper block-large-1-2 block-tab-full collapse ">
+                        <br>
+                        <hr color="Gray">
+                        <br>
+                        <center>
+                            <h1 style="font-size: 60px;" class="p-relative dsn-text" data-dsn-animate="section">Rymm</h1>
+                        </center>
+
+                        <div class="container section-margin ">
+                            <div class="p-relative">
+                                <a target="blank" href="https://twitter.com/kikiis_art/status/1553970600493797380?s=20&t=Oy96VLzBATWBasYRjes_xw">
+                                    <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-dsn-src="assets/img/project/project2/Reference Sheet.png" data-dsn-srcset="assets/img/project/project2/Reference Sheet.png 1800w,assets/img/project/project2/Reference Sheet.png 768w"
+                                        class="has-bigger-scale w-100" alt="">
+                                </a>
+                                <div class="cap">
+                                    <span>Reference Sheet</span>
+                                </div>
+                            </div>
+                        </div>
+                        <hr color="Gray">
+                        <br>
+                        <div style="position:relative; left: 17.5px;" class="row s-portfolio__list block-large-1-2 block-tab-full collapse over-hidden">
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl jacket.png" title="Rymm" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/owl jacket.png" srcset="assets/img/project/project2/owl jacket.png 2x, assets/img/project/project2/owl jacket.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl.png" title="Rymm" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/owl.png" srcset="assets/img/project/project2/owl.png 2x, assets/img/project/project2/owl.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm without jacket!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl remake back.png" title="Rymm" data-size="905x1280">
+                                            <img width="463.5" src="assets/img/project/project2/owl remake back.png" srcset="assets/img/project/project2/owl remake back.png 2x, assets/img/project/project2/owl remake back.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm BackSide!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="column" data-aos="fade-up">
+                                <div class="folio-item ">
+                                    <div class="has-popup folio-item__thumb">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project2/owl remake side.png" title="Rymm" data-size="905x1280">
+                                            <img width="263.5" src="assets/img/project/project2/owl remake side.png" srcset="assets/img/project/project2/owl remake back.png 2x, assets/img/project/project2/owl remake side.png 4x" alt="Commissioned Piece">
+                                        </a>
+                                    </div>
+                                    <div class="folio-item__info">
+                                        <div class="folio-item__cat">OC Commission</div>
+                                        <h4 class="folio-item__title">Rymm Side!</h4>
+                                    </div>
+                                    <a target=”blank” href="https://www.pixiv.net/en/artworks/100153458" title="Pixiv" class="folio-item__project-link">PIXIV</a>
+                                    <div class="folio-item__caption">
+                                        <p>Rymm</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+
+
+                    <!--=== Intro Project ===-->
+                    <div class="intro-project p-relative section-margin" data-dsn-animate="section">
+                        <div class="container">
+                            <div class="row dsn-up">
+                                <div class="col-lg-4">
+                                    <div class="intro-project-left">
+                                        <h4 class="title-block text-uppercase mb-20 ">Project Details</h4>
+                                        <ul class="intro-project-list ">
+                                            <li class="p-relative "><strong>Commissioner:</strong>@RYMM21</li>
+                                            <li class="p-relative "><strong>Commissioned on:</strong>06/14/2022</li>
+                                            <li class="p-relative "><strong> Completion Date:</strong>August 21, 2022</li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-7 offset-lg-1">
+                                    <div class="intro-project-right">
+                                        <h4 class="title-block text-uppercase mb-20 ">Lore</h4>
+                                        <p class="intro-project-description"><span style="color: rgb(184, 32, 32);">Private</span>
+                                        </p>
+
+                                        <div class="intro-project-cat mt-30 ">
+                                            <span class="cat-item"> By Shirozu </span>
+                                        </div>
+
+                                        <a target="_blank" href="https://twitter.com/kikiis_art" class="visit-site mt-30">
+                                            <span class="inner-visit d-flex align-items-center ">
+                            <span class="text text-uppercase ">Twitter</span>
+
+                                            <span class="icon ">
+                                <svg viewBox="0 0 40 40">
+                                    <polyline class="path "
                                         points="14.6 17.45 20 22.85 25.4 17.45">
                                     </polyline>
                                 </svg>
@@ -385,21 +530,21 @@
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
-                            <h6>Project</h6>
+                            <h6>Page</h6>
                             <span class="curent">3</span>
                             <span class="full">6</span>
                         </div>
 
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
-                            <span>induction</span>
+                            <span>Keep Scrolling down for next page</span>
                         </div>
 
                         <a href="project3.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
-                                <span class="title-stroke">Huggl Power Pack</span>
+                                <span class="title-stroke">Commissions</span>
 
-                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Huggl Power
-                                        Pack</span>
+                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Commissions
+                                        </span>
                             </h2>
                         </a>
 
