--- a/Fanart.html
+++ b/Fanart.html
@@ -313,9 +313,7 @@
                         </div>
                     </section>
                     <!-- end s-portfolio -->
-                    <center>
-                        <h1>The End</h1>
-                    </center>
+
 
 
 
@@ -330,7 +328,7 @@
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
-                            <h6>Commissions</h6>
+                            <h6>Page</h6>
                             <span class="curent">2</span>
                             <span class="full">6</span>
                         </div>
@@ -339,8 +337,8 @@
                         </div>
                         <a href="Commissions.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
-                                <span class="title-stroke">Paid Artworks!</span>
-                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">Paid Artworks!</span>
+                                <span class="title-stroke">OC Commissions!</span>
+                                <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">OC Commissions!</span>
                             </h2>
                         </a>
                         <div class="case">
