--- a/Fanart.html
+++ b/Fanart.html
@@ -132,8 +132,13 @@
                                 </li>
 
                                 <li>
-                                    <a href="work.html">
+                                    <a href="Fanart.html">
                                         <span class="dsn-title-menu">FanArt</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="oc_commissions.html">
+                                        <span class="dsn-title-menu">OC Commission</span>
                                     </a>
                                 </li>
                                 <li>
