--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="oc_commissions.html">
+                                        <span class="dsn-title-menu">OC Commission</span>
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="work.html">
                                         <span class="dsn-title-menu">Commission</span>
                                     </a>
@@ -326,10 +331,21 @@
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
                                     <a href="project2.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project2/CyanideNew.png">
+                                        <span class="metas mb-25"><span>OC Commission</span></span>
+
+                                        <h2 class="work__item-text">
+                                            <span class="work__item-textinner title">OC Commissions</span>
+                                        </h2>
+
+                                    </a>
+                                </div>
+
+                                <div class="work__item pt-80 pb-80 border-bottom">
+                                    <a href="project2.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/testst.png">
                                         <span class="metas mb-25"><span>Commission</span></span>
 
                                         <h2 class="work__item-text">
-                                            <span class="work__item-textinner title">Paid Work</span>
+                                            <span class="work__item-textinner title">Commissions</span>
                                         </h2>
 
                                     </a>
