--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -137,6 +137,11 @@
                                     </a>
                                 </li>
                                 <li>
+                                    <a href="oc_commissions.html">
+                                        <span class="dsn-title-menu">OC Commission</span>
+                                    </a>
+                                </li>
+                                <li>
                                     <a href="work.html">
                                         <span class="dsn-title-menu">Commission</span>
                                     </a>
