--- a/Fanart.html
+++ b/Fanart.html
@@ -340,7 +340,7 @@
                         <div class="metas d-inline-block mt-30 right-0 p-absolute top-0 dsn-container">
                             <span>keep scrolling down</span>
                         </div>
-                        <a href="Commissions.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                        <a href="oc_commissions.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
                                 <span class="title-stroke">OC Commissions!</span>
                                 <span class="p-absolute section-padding d-none top-0 w-100 h-100 left-0">OC Commissions!</span>
