--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a href="project2.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/testst.png">
+                                    <a href="Commissions.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project1/testst.png">
                                         <span class="metas mb-25"><span>Commission</span></span>
 
                                         <h2 class="work__item-text">
