--- a/Fanart.html
+++ b/Fanart.html
@@ -480,7 +480,7 @@
                 </a>
             </li>
             <li>
-                <a href="" target="_blank">
+                <a href="https://twitter.com/intent/follow?original_referer=https%3A%2F%2Fpublish.twitter.com%2F&screen_name=kikiis_art" target="_blank">
                     <i class="fab fa-twitter"></i>
                     <span>Tw</span>
                 </a>
