--- a/oc_commissions.html
+++ b/oc_commissions.html
@@ -531,7 +531,7 @@
 
                 <div class="next-project v-dark-head p-relative h-v-100 over-hidden">
                     <div class="bg w-100 h-100 p-absolute over-hidden z-index-0 before-z-index" data-overlay="6">
-                        <img src="assets/img/project/project3/1.jpg" alt="" class="cover-bg-img">
+                        <img src="assets/img/project/project3/Clopez.png" alt="" class="cover-bg-img">
                     </div>
                     <div class="next-project-inner dsn-container p-relative w-100 h-100 d-flex flex-column justify-content-center">
                         <div class="project-number p-absolute d-flex">
@@ -544,7 +544,7 @@
                             <span>Keep Scrolling down for next page</span>
                         </div>
 
-                        <a href="project3.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
+                        <a href="Commissions.html" class="effect-ajax border-top border-bottom" data-dsn-ajax="next">
                             <h2 class="title section-padding p-relative ">
                                 <span class="title-stroke">Commissions</span>
 
