--- a/Commissions.html
+++ b/Commissions.html
@@ -280,7 +280,7 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="Gura" data-size="905x1280">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/E.png" title="E" data-size="905x1280">
                                             <img width="512.9" src="assets/img/project/project3/E.png" srcset="assets/img/project/project3/E.png 1x, assets/img/project/project3/E.png" alt="Commission">
                                         </a>
                                     </div>
@@ -299,13 +299,13 @@
                             <div class="column" data-aos="fade-up">
                                 <div class="folio-item">
                                     <div class="has-popup folio-item__thumb">
-                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project1/Rushia Completed.png" title="Rushia" data-size="500x500">
-                                            <img width="529.5" src="assets/img/project/project1/Rushia Completed.png" srcset="assets/img/project/project1/Rushia Completed.png 4x, assets/img/project/project1/Rushia Completed.png 4x" alt="Rushia">
+                                        <a class="folio-item__thumb-link" target=”blank” href="assets/img/project/project3/Mia.png" title="Squili" data-size="500x500">
+                                            <img width="664.5" src="assets/img/project/project3/Mia.png" srcset="assets/img/project/project3/Mia.png 4x, assets/img/project/project3/Mia.png 4x" alt="Commission">
                                         </a>
                                     </div>
                                     <div class="folio-item__info">
                                         <div class="folio-item__cat">illustration/Commission</div>
-                                        <h4 class="folio-item__title">Squilli!</h4>
+                                        <h4 class="folio-item__title">Squili!</h4>
                                     </div>
                                     <a target=”blank” href="https://twitter.com/kikiis_art/status/1523378511867957249?s=20&t=urf_zqpBX5PrhsG2Eu94hg" title="Twitter" class="folio-item__project-link">Twitter</a>
 
