--- a/loli.html
+++ b/loli.html
@@ -235,11 +235,11 @@
                                     <div id="dsn-hero-title" class="intro-title">
                                         <div class="metas d-inline-block mb-20">
                                             <span>illustrations</span>
-                                            <span>Paid Work</span>
+                                            <span>Paid Work/FanArt</span>
                                         </div>
                                         <div class="p-relative dsn-hero-parallax-title">
                                             <h1 data-dsn-ajax="title">
-                                                Commissions
+                                                Smol Characters/Loli
                                             </h1>
                                         </div>
                                     </div>
