--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="Commissions.html">
                                         <span class="dsn-title-menu">Commission</span>
                                     </a>
                                 </li>
@@ -136,7 +136,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="work.html">
+                                    <a href="loli.html">
                                         <span class="dsn-title-menu">Smol Characters / Loli</span>
                                     </a>
                                 </li>
@@ -330,7 +330,7 @@
                                 </div>
 
                                 <div class="work__item pt-80 pb-80 border-bottom">
-                                    <a href="project2.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project2/CyanideNew.png">
+                                    <a href="oc_commissions.html" class="effect-ajax" data-dsn-ajax="work-hover" data-img="assets/img/project/project2/CyanideNew.png">
                                         <span class="metas mb-25"><span>OC Commission</span></span>
 
                                         <h2 class="work__item-text">
